# card-2024

./: .envrc  .gitmodules  childrens.html  classics.html  flake.nix  index.html  nonfiction.html  overall.html  package.json  pnpm-lock.yaml  pyproject.toml  search.html  svelte.config.js  vite.config.ts
.config/: commit_convention.yaml
_app/: version.json
back/: a0.html  a1.html  a2.html  a3.html  b0.html  b1.html  b2.html  b3.html
back/a0/: index.html
back/a1/: index.html
back/a2/: index.html
back/a3/: index.html
back/b0/: index.html
back/b1/: index.html
back/b2/: index.html
back/b3/: index.html
childrens/: bottom.html  index.html  middle.html  top.html
childrens/bottom/: index.html
childrens/middle/: index.html
childrens/top/: index.html
classics/: index.html
content/back/: a2.json  b1.json  b3.json
content/childrens/: index.json  middle.json
content/classics/: as_i_lay_dying.md  cats.md  complete_tales_and_poems.md  frankenstein.md  hercule_poirots_christmas.md  his_last_bow.md  in_defense_of_food.md  index.json  julie_julia.md  miss_marple_the_complete_short_stories.md  murder_on_the_orient_express.md  pride_and_prejudice.md  pride_and_prejudice_2.md  salt.md  sherlock_holmes.md  sherlock_holmes_the_complete_novels_and_stories.md  the_help.md  (+16 more)
front/: a0.html  a1.html  a2.html  a3.html  b0.html  b1.html  b2.html  b3.html  bean.html
nonfiction/: bottom.html  index.html  middle.html  top.html
overall/: index.html
scripts/: deploy.sh  grounded.py
search/: index.html
src/: app.d.ts  app.html
tina/: config.ts  tina-lock.json
(+1015 files in other folders)
